<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_blank1"
            android:title="" />
        <item
            android:id="@+id/nav_blank2"
            android:title="" />
        <item
            android:id="@+id/nav_blank3"
            android:title="" />


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_meet"
            android:icon="@drawable/ic_baseline_meeting_room_24"
            android:title="@string/meetings" />
        <item
            android:id="@+id/nav_notula"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/notula" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_baseline_report_24"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about" />
    </group>
</menu>